# Obsidian_to_Anki

./: .gitignore  README.md  notes.md  obsidian_to_anki.py  obsidian_to_anki_config.ini
Work/: Add this css snippet for side comments.md  Homepage.buttons.md  Homepage.md  updateSettings_fromWork.bat
Work/Anki/: Anki Gemini Workflow Output.md
Work/Archive/Finished Projects/: P001 logging_partial_wildcard.md  P002 logging_pass_tests.md  P003 ConfigCreator_Integration.md  P005 VivaPro Manual.md  (+13 more)
Work/Docs/: Multi-core Executing Multiple threads.md  Questions.md  Terminology Sheet.md
Work/Docs_Research_Industry/: Background on Journals Conferences and Associations.md  Robot Report Podcast 2023 End Of Year.md
Work/Projects/: SDL Presentation.Everything is More Complicated in Space.md  SDL Presentation.md
Work/Vault_Tools/: Acronym DB.md  Active Project Query.md  Archived Project MOC.md  Cheatsheet Viewer.md  Checkboxes.md  Command DB.md  Connections Visualizer.md  Daily TODO and Backlog.md  Dataview Sandbox.md  Export Cheatsheet Docs.md  Property Viewer.md  Questions DB.md  TODO.md  Term DB.md
obsidian_to_anki/: __init__.py  __main__.py  directory.py  format_converter.py  note.py  pyproject.toml
obsidian_to_anki/src/obsidian_to_anki/: __init__.py  __main__.py  anki_connect.py  app.py  config.py  data.py  directory.py  file.py  format_converter.py  globals.py  utils.py
obsidian_to_anki/tests/: test_anki_connect.py  test_app.py  test_config.py  test_data.py  test_directory.py  test_file.py  test_format_converter.py  test_note.py  test_utils.py
(+2184 files in other folders)
